--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <td><img src="circle-cropped.png" alt="Aditya Pandey profile pic" height="200" width="200"></td>
       <td><h1>Aditya Pandey</h1>
       <p><em>A upcoming full stack web developer and upcoming aspiring <strong><a href="https://algorithmia.com/blog/what-is-artificial-intelligence-engineering">Aritificial Intelligence Engineer</a></strong></em>.</p>
-      <p>I am learning Full Stack Web development and A.I engineering. I love to do coding and thinking about some inovative and creative ideas.</p></td>
+      <p>I am learning Full Stack Web development and A.I engineering. I 💖to do coding and thinking about some inovative and creative ideas.</p></td>
     </tr>
   </table>
   <hr>
